[gd_scene load_steps=7 format=2]

[ext_resource path="res://imagens/eduquiz/inicio.jpeg" type="Texture" id=1]
[ext_resource path="res://legendas/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://imagens/github.png" type="Texture" id=3]
[ext_resource path="res://imagens/linkedin.png" type="Texture" id=4]
[ext_resource path="res://scripts/level/Menu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 7 )

[node name="recorde" type="Button" parent="."]
margin_left = 995.0
margin_top = 18.0
margin_right = 1180.0
margin_bottom = 80.0

[node name="comojogar" type="Button" parent="."]
margin_left = 997.0
margin_top = 615.0
margin_right = 1182.0
margin_bottom = 677.0

[node name="start" type="Button" parent="."]
margin_left = 527.0
margin_top = 515.0
margin_right = 761.0
margin_bottom = 614.0

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="Github" type="Sprite" parent="."]
position = Vector2( 32.5, 629.25 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Linkedin" type="Sprite" parent="."]
position = Vector2( 32.5, 693 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 63.0
margin_top = 616.0
margin_right = 194.0
margin_bottom = 643.0
custom_fonts/font = SubResource( 1 )
text = "EliasPacheco"

[node name="Label2" type="Label" parent="."]
margin_left = 64.0
margin_top = 678.0
margin_right = 195.0
margin_bottom = 705.0
custom_fonts/font = SubResource( 1 )
text = "elias-pacheco-450373218"

[node name="buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="git" type="Button" parent="buttons"]
margin_left = 10.0
margin_top = 608.0
margin_right = 193.0
margin_bottom = 657.0
flat = true

[node name="link" type="Button" parent="buttons"]
margin_left = 13.0
margin_top = 674.0
margin_right = 330.0
margin_bottom = 719.0
flat = true

[connection signal="pressed" from="recorde" to="." method="_on_recorde_pressed"]
[connection signal="pressed" from="comojogar" to="." method="_on_comojogar_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="buttons/git" to="." method="_on_git_pressed"]
[connection signal="pressed" from="buttons/link" to="." method="_on_link_pressed"]
